--- a/halloween/index.html
+++ b/halloween/index.html
@@ -94,9 +94,9 @@
 <body class="text-gray-100 min-h-screen flex items-center justify-center p-4 relative overflow-hidden">
   
   <!-- Floating bats -->
-  <img src="https://upload.wikimedia.org/wikipedia/commons/1/18/Bat_icon.svg" class="bat" style="left:10%; animation-delay: 0s;">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/1/18/Bat_icon.svg" class="bat" style="left:70%; animation-delay: 5s;">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/1/18/Bat_icon.svg" class="bat" style="left:40%; animation-delay: 8s;">
+  <img src="https://www.svgrepo.com/download/454288/bat-blood-halloween.svg" class="bat" style="left:10%; animation-delay: 0s;">
+  <img src="https://www.svgrepo.com/download/454288/bat-blood-halloween.svg" class="bat" style="left:70%; animation-delay: 5s;">
+  <img src="https://www.svgrepo.com/download/454288/bat-blood-halloween.svg" class="bat" style="left:40%; animation-delay: 8s;">
 
   <!-- Falling Pumpkins -->
   <div class="pumpkin" style="left:20%; animation-delay:1s;">🎃</div>
